// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`sample test > parse common sentence 1`] = `
{
  "children": {
    "sentence": [
      {
        "children": {
          "period": [
            {
              "endColumn": 18,
              "endLine": 1,
              "endOffset": 17,
              "image": ".",
              "startColumn": 18,
              "startLine": 1,
              "startOffset": 17,
              "tokenType": {
                "CATEGORIES": [],
                "PATTERN": ".",
                "categoryMatches": [],
                "categoryMatchesMap": {},
                "isParent": false,
                "name": "period",
                "tokenTypeIdx": 6,
              },
              "tokenTypeIdx": 6,
            },
          ],
          "word": [
            {
              "children": {
                "CommonWord": [
                  {
                    "endColumn": 5,
                    "endLine": 1,
                    "endOffset": 4,
                    "image": "There",
                    "startColumn": 1,
                    "startLine": 1,
                    "startOffset": 0,
                    "tokenType": {
                      "CATEGORIES": [],
                      "PATTERN": /\\[a-zA-Z\\]\\+/,
                      "categoryMatches": [],
                      "categoryMatchesMap": {},
                      "isParent": false,
                      "name": "CommonWord",
                      "tokenTypeIdx": 4,
                    },
                    "tokenTypeIdx": 4,
                  },
                ],
              },
              "name": "word",
            },
            {
              "children": {
                "CommonWord": [
                  {
                    "endColumn": 8,
                    "endLine": 1,
                    "endOffset": 7,
                    "image": "is",
                    "startColumn": 7,
                    "startLine": 1,
                    "startOffset": 6,
                    "tokenType": {
                      "CATEGORIES": [],
                      "PATTERN": /\\[a-zA-Z\\]\\+/,
                      "categoryMatches": [],
                      "categoryMatchesMap": {},
                      "isParent": false,
                      "name": "CommonWord",
                      "tokenTypeIdx": 4,
                    },
                    "tokenTypeIdx": 4,
                  },
                ],
              },
              "name": "word",
            },
            {
              "children": {
                "CommonWord": [
                  {
                    "endColumn": 11,
                    "endLine": 1,
                    "endOffset": 10,
                    "image": "no",
                    "startColumn": 10,
                    "startLine": 1,
                    "startOffset": 9,
                    "tokenType": {
                      "CATEGORIES": [],
                      "PATTERN": /\\[a-zA-Z\\]\\+/,
                      "categoryMatches": [],
                      "categoryMatchesMap": {},
                      "isParent": false,
                      "name": "CommonWord",
                      "tokenTypeIdx": 4,
                    },
                    "tokenTypeIdx": 4,
                  },
                ],
              },
              "name": "word",
            },
            {
              "children": {
                "CommonWord": [
                  {
                    "endColumn": 17,
                    "endLine": 1,
                    "endOffset": 16,
                    "image": "error",
                    "startColumn": 13,
                    "startLine": 1,
                    "startOffset": 12,
                    "tokenType": {
                      "CATEGORIES": [],
                      "PATTERN": /\\[a-zA-Z\\]\\+/,
                      "categoryMatches": [],
                      "categoryMatchesMap": {},
                      "isParent": false,
                      "name": "CommonWord",
                      "tokenTypeIdx": 4,
                    },
                    "tokenTypeIdx": 4,
                  },
                ],
              },
              "name": "word",
            },
          ],
        },
        "name": "sentence",
      },
    ],
  },
  "name": "errorMessage",
}
`;

exports[`sample test > parse function error target 1`] = `
{
  "children": {
    "sentence": [
      {
        "children": {
          "FunctionTarget": [
            {
              "endColumn": 15,
              "endLine": 1,
              "endOffset": 14,
              "image": "Function format",
              "startColumn": 1,
              "startLine": 1,
              "startOffset": 0,
              "tokenType": {
                "CATEGORIES": [],
                "PATTERN": /\\(F\\|f\\)unction \\[a-zA-Z0-9_\\]\\+\\(\\\\\\\\\\[a-zA-Z0-9_\\]\\+\\)\\*/,
                "categoryMatches": [],
                "categoryMatchesMap": {},
                "isParent": false,
                "name": "FunctionTarget",
                "tokenTypeIdx": 3,
              },
              "tokenTypeIdx": 3,
            },
          ],
          "period": [
            {
              "endColumn": 26,
              "endLine": 1,
              "endOffset": 25,
              "image": ".",
              "startColumn": 26,
              "startLine": 1,
              "startOffset": 25,
              "tokenType": {
                "CATEGORIES": [],
                "PATTERN": ".",
                "categoryMatches": [],
                "categoryMatchesMap": {},
                "isParent": false,
                "name": "period",
                "tokenTypeIdx": 6,
              },
              "tokenTypeIdx": 6,
            },
          ],
          "word": [
            {
              "children": {
                "CommonWord": [
                  {
                    "endColumn": 19,
                    "endLine": 1,
                    "endOffset": 18,
                    "image": "not",
                    "startColumn": 17,
                    "startLine": 1,
                    "startOffset": 16,
                    "tokenType": {
                      "CATEGORIES": [],
                      "PATTERN": /\\[a-zA-Z\\]\\+/,
                      "categoryMatches": [],
                      "categoryMatchesMap": {},
                      "isParent": false,
                      "name": "CommonWord",
                      "tokenTypeIdx": 4,
                    },
                    "tokenTypeIdx": 4,
                  },
                ],
              },
              "name": "word",
            },
            {
              "children": {
                "CommonWord": [
                  {
                    "endColumn": 25,
                    "endLine": 1,
                    "endOffset": 24,
                    "image": "found",
                    "startColumn": 21,
                    "startLine": 1,
                    "startOffset": 20,
                    "tokenType": {
                      "CATEGORIES": [],
                      "PATTERN": /\\[a-zA-Z\\]\\+/,
                      "categoryMatches": [],
                      "categoryMatchesMap": {},
                      "isParent": false,
                      "name": "CommonWord",
                      "tokenTypeIdx": 4,
                    },
                    "tokenTypeIdx": 4,
                  },
                ],
              },
              "name": "word",
            },
          ],
        },
        "name": "sentence",
      },
    ],
  },
  "name": "errorMessage",
}
`;

exports[`sample test > parse function not found error 1`] = `
{
  "children": {
    "sentence": [
      {
        "children": {
          "FunctionTarget": [
            {
              "endColumn": 15,
              "endLine": 1,
              "endOffset": 14,
              "image": "Function format",
              "startColumn": 1,
              "startLine": 1,
              "startOffset": 0,
              "tokenType": {
                "CATEGORIES": [],
                "PATTERN": /\\(F\\|f\\)unction \\[a-zA-Z0-9_\\]\\+\\(\\\\\\\\\\[a-zA-Z0-9_\\]\\+\\)\\*/,
                "categoryMatches": [],
                "categoryMatchesMap": {},
                "isParent": false,
                "name": "FunctionTarget",
                "tokenTypeIdx": 3,
              },
              "tokenTypeIdx": 3,
            },
          ],
          "period": [
            {
              "endColumn": 26,
              "endLine": 1,
              "endOffset": 25,
              "image": ".",
              "startColumn": 26,
              "startLine": 1,
              "startOffset": 25,
              "tokenType": {
                "CATEGORIES": [],
                "PATTERN": ".",
                "categoryMatches": [],
                "categoryMatchesMap": {},
                "isParent": false,
                "name": "period",
                "tokenTypeIdx": 6,
              },
              "tokenTypeIdx": 6,
            },
          ],
          "word": [
            {
              "children": {
                "CommonWord": [
                  {
                    "endColumn": 19,
                    "endLine": 1,
                    "endOffset": 18,
                    "image": "not",
                    "startColumn": 17,
                    "startLine": 1,
                    "startOffset": 16,
                    "tokenType": {
                      "CATEGORIES": [],
                      "PATTERN": /\\[a-zA-Z\\]\\+/,
                      "categoryMatches": [],
                      "categoryMatchesMap": {},
                      "isParent": false,
                      "name": "CommonWord",
                      "tokenTypeIdx": 4,
                    },
                    "tokenTypeIdx": 4,
                  },
                ],
              },
              "name": "word",
            },
            {
              "children": {
                "CommonWord": [
                  {
                    "endColumn": 25,
                    "endLine": 1,
                    "endOffset": 24,
                    "image": "found",
                    "startColumn": 21,
                    "startLine": 1,
                    "startOffset": 20,
                    "tokenType": {
                      "CATEGORIES": [],
                      "PATTERN": /\\[a-zA-Z\\]\\+/,
                      "categoryMatches": [],
                      "categoryMatchesMap": {},
                      "isParent": false,
                      "name": "CommonWord",
                      "tokenTypeIdx": 4,
                    },
                    "tokenTypeIdx": 4,
                  },
                ],
              },
              "name": "word",
            },
          ],
        },
        "name": "sentence",
      },
    ],
  },
  "name": "errorMessage",
}
`;

exports[`sample test > parse function with namespace error target 1`] = `
{
  "children": {
    "sentence": [
      {
        "children": {
          "FunctionTarget": [
            {
              "endColumn": 19,
              "endLine": 1,
              "endOffset": 18,
              "image": "Function abc\\format",
              "startColumn": 1,
              "startLine": 1,
              "startOffset": 0,
              "tokenType": {
                "CATEGORIES": [],
                "PATTERN": /\\(F\\|f\\)unction \\[a-zA-Z0-9_\\]\\+\\(\\\\\\\\\\[a-zA-Z0-9_\\]\\+\\)\\*/,
                "categoryMatches": [],
                "categoryMatchesMap": {},
                "isParent": false,
                "name": "FunctionTarget",
                "tokenTypeIdx": 3,
              },
              "tokenTypeIdx": 3,
            },
          ],
          "period": [
            {
              "endColumn": 30,
              "endLine": 1,
              "endOffset": 29,
              "image": ".",
              "startColumn": 30,
              "startLine": 1,
              "startOffset": 29,
              "tokenType": {
                "CATEGORIES": [],
                "PATTERN": ".",
                "categoryMatches": [],
                "categoryMatchesMap": {},
                "isParent": false,
                "name": "period",
                "tokenTypeIdx": 6,
              },
              "tokenTypeIdx": 6,
            },
          ],
          "word": [
            {
              "children": {
                "CommonWord": [
                  {
                    "endColumn": 23,
                    "endLine": 1,
                    "endOffset": 22,
                    "image": "not",
                    "startColumn": 21,
                    "startLine": 1,
                    "startOffset": 20,
                    "tokenType": {
                      "CATEGORIES": [],
                      "PATTERN": /\\[a-zA-Z\\]\\+/,
                      "categoryMatches": [],
                      "categoryMatchesMap": {},
                      "isParent": false,
                      "name": "CommonWord",
                      "tokenTypeIdx": 4,
                    },
                    "tokenTypeIdx": 4,
                  },
                ],
              },
              "name": "word",
            },
            {
              "children": {
                "CommonWord": [
                  {
                    "endColumn": 29,
                    "endLine": 1,
                    "endOffset": 28,
                    "image": "found",
                    "startColumn": 25,
                    "startLine": 1,
                    "startOffset": 24,
                    "tokenType": {
                      "CATEGORIES": [],
                      "PATTERN": /\\[a-zA-Z\\]\\+/,
                      "categoryMatches": [],
                      "categoryMatchesMap": {},
                      "isParent": false,
                      "name": "CommonWord",
                      "tokenTypeIdx": 4,
                    },
                    "tokenTypeIdx": 4,
                  },
                ],
              },
              "name": "word",
            },
          ],
        },
        "name": "sentence",
      },
    ],
  },
  "name": "errorMessage",
}
`;
